--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,11 @@
     <string name="new_game">+ New Game</string>
     <string name="how_to">How to play</string>
     <string name="play_person">Play another person</string>
-    <string name="play_computer">Play the computer</string>
+    <string name="play_computer">&#160;&#160;Play the computer&#160;&#160;</string>
     <string name="play_again">Play again</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="board_size">Board Size</string>
+    <string name="vertices">Vertices</string>
+    <string name="player_color">Player Color</string>
 </resources>
