added icons to play options buttons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="play_person">Play another person</string>
     <string name="play_computer">&#160;&#160;Play the computer&#160;&#160;</string>
     <string name="play_again">Play again</string>
+    <string name="play_options">Play Options</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="board_size">Board Size</string>
