> scroll view added in settings > support user to select color for player 1 & 2 > refactored code in GameState, GameFragment, and GameView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="board_size">Board Size</string>
     <string name="vertices">Vertices</string>
     <string name="player_color">Player Color</string>
+    <string name="color_for_player">Color for Player</string>
 </resources>
