Replaced bottom nav bar w/ floating btns > added back buttons to game play, settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="vertices">Vertices</string>
     <string name="player_color">Player Color</string>
     <string name="color_for_player">Color for Player</string>
+    <string name="settings_button">settings button</string>
+    <string name="help_button">help button</string>
 </resources>
