--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="play_computer">&#160;&#160;Play the computer&#160;&#160;</string>
     <string name="play_again">Play again</string>
     <string name="dots_boxes">dots and boxes</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="play_options">Start a Game:</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="board_size">Board Size</string>
     <string name="vertices">Vertices</string>
