--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="new_game">Start New Game</string>
     <string name="how_to">How to play</string>
     <string name="play_person">Play in person</string>
-    <string name="play_computer">&#160;&#160;Play the computer&#160;&#160;</string>
+    <string name="play_computer">Play the computer</string>
     <string name="play_again">Play again</string>
     <string name="dots_boxes">dots and boxes</string>
     <string name="play_options">Start a Game:</string>
