--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="pink">Pink</string>
     <string name="green">Green</string>
     <string name="purple">Purple</string>
+    <string name="resume_game">resume current game</string>
 </resources>
