--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DotsBoxes</string>
+    <string name="app_name">Dots and Boxes</string>
     <string name="get_started">Get Started!</string>
     <string name="welcome">Welcome to Dots &amp; Boxes</string>
     <string name="lets_play">Let\'s Play!</string>
@@ -21,9 +21,9 @@
     <string name="help_button">help button</string>
     <string name="board_warning">Changing the board size will result in any game progress being lost.\nDo you want to continue?</string>
     <string name="new_user_name_input">My name is …</string>
-    <string name="rules_1">1. Take turns creating lines by dragging your finger from one dot to another.</string>
-    <string name="rules_2">2. Complete a box by closing its fourth wall.</string>
-    <string name="rules_3">3. You take another turn after completing a box.</string>
+    <string name="rules_1">Take turns creating lines by dragging your finger from one dot to another.</string>
+    <string name="rules_2">Complete a box by closing its fourth wall.</string>
+    <string name="rules_3">You take another turn after completing a box.</string>
     <string name="help_goal">Player with most boxes at the end of the game wins.</string>
     <string name="quit_game">Quit Game</string>
     <!-- Accessibility Strings -->
