help dialog pops up for first time users > fixed padding on avatars > updated button txt on landing screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
     <string name="resume">Resume Saved Game</string>
     <string name="new_game">Start New Game</string>
     <string name="how_to">How to play</string>
-    <string name="play_person">Play in person</string>
-    <string name="play_computer">Play the computer</string>
+    <string name="play_person">PLAYER vs PLAYER</string>
+    <string name="play_computer">PLAYER vs COMPUTER</string>
     <string name="play_again">Play again</string>
     <string name="dots_boxes">dots and boxes</string>
     <string name="play_options">Start a Game:</string>
